[package]
name = "neptune-search-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.5.0"
log = { version = "0.4.17" }
env_logger = { version = "0.10.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
actix-web = { version = "4.3" }
